--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   provider: ^6.1.2
   intl: ^0.19.0
   group_button: ^5.3.4
+  image_picker: ^1.1.2
 
 dev_dependencies:
   flutter_test:
